{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 15,
  "lineage": "00ae7b33-fc1a-d6e6-aedf-bedd90d86655",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9034fbf4c11fbdf",
            "domain": "vpc",
            "id": "eipalloc-0f9034fbf4c11fbdf",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-238-241-104.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.241.104",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:internet-gateway/igw-0b32d7b8802144bdf",
            "id": "igw-0b32d7b8802144bdf",
            "owner_id": "882205163664",
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9034fbf4c11fbdf",
            "connectivity_type": "public",
            "id": "nat-05807ed65db5db439",
            "network_interface_id": "eni-024db9d72cb651681",
            "private_ip": "10.10.10.38",
            "public_ip": "44.238.241.104",
            "subnet_id": "subnet-0669bf71f45703ddb"
          },
          "dependencies": [
            "aws_eip.ip_pub",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f00dbf2eca89f0741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05807ed65db5db439",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f00dbf2eca89f074",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip_pub",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.default",
            "aws_route_table.rt_private",
            "aws_subnet.public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:route-table/rtb-0f00dbf2eca89f074",
            "id": "rtb-0f00dbf2eca89f074",
            "owner_id": "882205163664",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:route-table/rtb-062f043c81ff36ef1",
            "id": "rtb-062f043c81ff36ef1",
            "owner_id": "882205163664",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b32d7b8802144bdf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "link_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023897a362659c318",
            "route_table_id": "rtb-0f00dbf2eca89f074",
            "subnet_id": "subnet-02c0ac25d0a903c7a"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "link_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069241a668c9399c0",
            "route_table_id": "rtb-062f043c81ff36ef1",
            "subnet_id": "subnet-0669bf71f45703ddb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:security-group/sg-0861bba77d0e52541",
            "description": "Allow inbound traffic from public subnet",
            "egress": [],
            "id": "sg-0861bba77d0e52541",
            "ingress": [],
            "name": "terraform-20221129143537148300000001",
            "name_prefix": "terraform-",
            "owner_id": "882205163664",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:security-group/sg-005b347da33ab2482",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005b347da33ab2482",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "882205163664",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3735262683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0861bba77d0e52541",
            "security_group_rule_id": "sgr-01d313ba0fdd94a12",
            "self": false,
            "source_security_group_id": "sg-005b347da33ab2482",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_private",
            "aws_security_group.sg_public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:subnet/subnet-02c0ac25d0a903c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c0ac25d0a903c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882205163664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:subnet/subnet-0669bf71f45703ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669bf71f45703ddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882205163664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7d6cd2722304fb0"
          },
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:vpc/vpc-0f7d6cd2722304fb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09102fa61cb1c1100",
            "default_route_table_id": "rtb-0e15ee0f9207238da",
            "default_security_group_id": "sg-0a9af8afbeaf3e862",
            "dhcp_options_id": "dopt-0f45d693a958afa0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7d6cd2722304fb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e15ee0f9207238da",
            "owner_id": "882205163664",
            "tags": {
              "Environment": "dev",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "vpc",
              "Team": "hillel devops"
            }
          }
        }
      ]
    }
  ]
}